--- a/static/main.css
+++ b/static/main.css
@@ -36,7 +36,7 @@ input[type="submit"]:focus {
 input[type="submit"]:focus {
   box-shadow: 1px 1px 2px #333;
 }
-input[name="replyTo"] {
+input[name="replyTo"], input[name="statusLink"]{
   width: 39.3em;
 }
 #character-count {
