--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,2 +1,9 @@
+  <script>
+    setTimeout(function(){
+      var style = document.createElement('style')
+      style.innerHTML = '* { transition: all 0.3s }'
+      document.body.appendChild(style)
+    }, 0)
+  </script>
   </body>
 </html>
