--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang='en'>
   <head>
-    <title>Post new status</title>
+    <title>{{default title "bjb.io"}}</title>
     <link rel="stylesheet" type="text/css" href="/static/fira.css">
     <link rel="stylesheet" type="text/css" href="/static/main.css">
   </head>
