--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,9 @@
+  <footer>
+    brianloveswords on
+    <a href="https://twitter.com/@brianloveswords" rel="me">twitter</a> and
+    <a href="https://github.com/brianloveswords" rel="me">github</a>
+  </footer>
+
   <script>
     setTimeout(function(){
       var style = document.createElement('style')
