--- a/templates/header.html
+++ b/templates/header.html
@@ -4,5 +4,8 @@
     <title>{{default title "bjb.io"}}</title>
     <link rel="stylesheet" type="text/css" href="/static/fira.css">
     <link rel="stylesheet" type="text/css" href="/static/main.css">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   </head>
   <body>
