utf8 rules everything around me.

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang='en'>
   <head>
+    <meta charset="utf-8">
+
     <title>{{default title "bjb.io"}}</title>
     <link rel="stylesheet" type="text/css" href="/static/fira.css">
     <link rel="stylesheet" type="text/css" href="/static/main.css">
-
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   </head>
