--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="/static/fira.css">
     <link rel="stylesheet" type="text/css" href="/static/main.css">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
   </head>
   <body>
