Remove self from list when replying.

--- a/templates/header.html
+++ b/templates/header.html
@@ -9,4 +9,4 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
   </head>
-  <body>
+  <body data-twitter-handle="{{ accounts.twitter }}">
