--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,5 @@
 <script src="https://login.persona.org/include.js"></script>
-<link rel="stylesheet" href="/static/persona-buttons.css" />
+<link rel="stylesheet" href="/static/css/persona-buttons.css" />
 <style>
   .wrap{
       margin: 100px auto;
@@ -22,4 +22,4 @@
   <input class="js-persona-assertion" type="hidden" name="assertion">
 </form>
 
-<script src="/static/login.js"></script>
+<script src="/static/js/login.js"></script>
