--- a/templates/new-status.html
+++ b/templates/new-status.html
@@ -14,6 +14,6 @@
   <input type="submit" value="Post Status">
 </form>
 
-<script src="/static/twitter.js"></script>
-<script src="/static/remote.js"></script>
-<script src="/static/post-status.js"></script>
+<script src="/static/js/twitter.js"></script>
+<script src="/static/js/remote.js"></script>
+<script src="/static/js/new-status.js"></script>
