--- a/templates/header.html
+++ b/templates/header.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
 
     <title>{{default title "bjb.io"}}</title>
-    <link rel="stylesheet" type="text/css" href="/static/fira.css">
-    <link rel="stylesheet" type="text/css" href="/static/main.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/fira.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
+    <script src="/static/js/domready.js"></script>
   </head>
   <body data-twitter-handle="{{ accounts.twitter }}">
