Allow pre-filling of status links

--- a/templates/new-status.html
+++ b/templates/new-status.html
@@ -4,7 +4,9 @@
     <input id="reply-to"
            type="text"
            name="replyTo"
-           placeholder="https://twitter.com/brianloveswords/status/12345"/>
+           placeholder="https://twitter.com/brianloveswords/status/12345"
+           value="{{ statusLink }}"
+           />
   </label>
 
   <p id="existing-status"></p>
