--- a/templates/reblog.html
+++ b/templates/reblog.html
@@ -4,7 +4,9 @@
     <input type="text"
            id="status-link"
            name="statusLink"
-           placeholder="https://twitter.com/brianloveswords/status/12345"/>
+           placeholder="https://twitter.com/brianloveswords/status/12345"
+           value="{{ statusLink }}"
+           />
   </label>
 
   <p id="existing-status"></p>
@@ -15,6 +17,6 @@
 
 </form>
 
-<script src="/static/twitter.js"></script>
-<script src="/static/remote.js"></script>
-<script src="/static/reblog.js"></script>
+<script src="/static/js/twitter.js"></script>
+<script src="/static/js/remote.js"></script>
+<script src="/static/js/reblog.js"></script>
