--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,7 @@
     <title>{{default title "bjb.io"}}</title>
     <link rel="stylesheet" type="text/css" href="/static/css/fira.css">
     <link rel="stylesheet" type="text/css" href="/static/css/main.css">
+    <link rel="icon" type="image/png" href="/static/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js"></script>
     <script src="/static/js/domready.js"></script>
